90) kernel: net: use new condition when both GMAC's of RT3883/MT7621 is really used.<br>
91) kernel: net: compat: fix minor information leak in siocdevprivate_ioctl().<br>
92) kernel: net: ppp: clarify parsing of user supplied data in ppp_set_compress().<br>
93) kernel: net: ppp: release rtnl mutex when interface creation fails.<br>
94) kernel: net: pppoe: fix reference counting in PPPoE proxy.<br>
95) kernel: net: af_unix: don't set err in unix_stream_read_generic unless there was an error.<br>
96) kernel: net: af_unix: guard against other == sk in unix_dgram_sendmsg.<br>
97) kernel: net: socket: get_empty_filp()/alloc_file() leave both ->f_pos and ->f_version zero.<br>
98) kernel: net: socket: sock_close() couldn't have been called with NULL inode since at least 2.1.early.<br>
99) kernel: net: socket: use SYSCALL_DEFINEx for sys_recv.<br>
100) kernel: net: vlan: turn on unicast filtering on vlan device.<br>
101) kernel: net: ipv4: only create late gso-skb if skb is already set up with CHECKSUM_PARTIAL.<br>
<br>
<br>
<b>4.1.x</b><br>
1) coovachilli: bstring: sync with git 13.03.2016 (commit ec15981d).<br>
2) dropbear: up to 2016.72 version.<br>
3) quagga: up to 1.0.20160315 version.<br>
4) netcwnmp: rewrite for support cwmp 1.0.0 (tested with acs-test_1.0.14.01_amd64).<br>
5) libnvram: always use safe version of free.<br>
6) busybox: udhcpd: keep expired leases at startup.<br>
7) system: enable ripd support (fixed in last quagga).<br>
8) kernel: ralink_arch: fix build without pci-e port2 enabled (tube sample).<br>
9) kernel: add cryptodev-linux driver 1.8 (http://cryptodev-linux.org).<br>
10) kernel: add AES Engine driver for MT7628 (fully code refactoring).<br>
11) kernel: net: ipv4: fix memory leaks in ip_cmsg_send() callers.<br>
12) kernel: net: csum: update csum_block_add to use rotate instead of byteswap.<br>
13) kernel: net: ppp: ensure file->private_data can't be overridden.<br>
14) kernel: net: vlan: propagate gso_max_segs.<br>
<br>
<br>
<br>